Push all latest code to main

--- a/Lab 3 - Create A RAG Agent.ipynb
+++ b/Lab 3 - Create A RAG Agent.ipynb
@@ -71,9 +71,11 @@
     "    if conn.connection_type == \"CognitiveSearch\":\n",
     "        conn_id = conn.id\n",
     "        print(f\"Connection ID: {conn.id}\")\n",
-    "\n",
     "# Connect to your Azure AI Search index\n",
-    "ai_search = AzureAISearchTool(index_connection_id=conn_id, index_name=\"health-plan\")"
+    "if not conn_id:\n",
+    "    print(\"No CognitiveSearch connection found. Please set up the Azure AI Search connection in your Azure AI Foundry project and ensure the index 'health-plan' exists.\")\n",
+    "else:\n",
+    "    ai_search = AzureAISearchTool(index_connection_id=conn_id, index_name=\"health-plan\")\n"
    ]
   },
   {
@@ -115,10 +117,8 @@
    "source": [
     "# The name of the health plan we want to search for\n",
     "plan_name = 'Northwind Standard'\n",
-    "\n",
     "# Create a thread which is a conversation session between an agent and a user. \n",
     "thread = project_client.agents.create_thread()\n",
-    "\n",
     "# Create a message in the thread with the user asking for information about a specific health plan\n",
     "message = project_client.agents.create_message(\n",
     "    thread_id=thread.id,\n",
@@ -127,22 +127,17 @@
     ")\n",
     "# Run the agent to process tne message in the thread\n",
     "run = project_client.agents.create_and_process_run(thread_id=thread.id, assistant_id=search_agent.id)\n",
-    "\n",
     "# Check if the run was successful\n",
     "if run.status == \"failed\":\n",
     "    print(f\"Run failed: {run.last_error}\")\n",
-    "\n",
     "# Delete the agent when it's done running\n",
     "project_client.agents.delete_agent(search_agent.id)\n",
-    "\n",
     "# Fetch all the messages from the thread\n",
     "messages = project_client.agents.list_messages(thread_id=thread.id)\n",
-    "\n",
     "# Get the last message, which is the agent's resposne to the user's question\n",
     "last_msg = messages.get_last_text_message_by_role(\"assistant\")\n",
-    "\n",
     "# Display the agent's response\n",
-    "print('Agent:', last_msg.text.value)"
+    "print('Agent:', last_msg.text.value)\n"
    ]
   }
  ],
